--- a/translations/back_cover.tex/fr.po
+++ b/translations/back_cover.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-10-23 21:18+0000\n"
-"PO-Revision-Date: 2025-03-26 09:51+0000\n"
+"PO-Revision-Date: 2025-11-14 17:57+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -15,27 +15,22 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.8\n"
 
 #. type: Plain text
 #: sections/back_cover.tex:4
 msgid "\\restoregeometry"
-msgstr ""
+msgstr "\\restoregeometry"
 
 #. type: Plain text
 #: sections/back_cover.tex:12
-#, fuzzy
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
-#| "\\end{center}\n"
-#| "\n"
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
 "overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
 "page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
 "{\\layout/back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
-"\\begin{center}\n"
-"  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
-"\\end{center}\n"
-"\n"
+"\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
+"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
+"{\\layout/back.jpg} }; \\end{tikzpicture} }"
