--- a/translations/credits.tex/fr.po
+++ b/translations/credits.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-09-30 13:50+0200\n"
-"PO-Revision-Date: 2025-05-08 21:05+0200\n"
+"PO-Revision-Date: 2025-11-14 18:09+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -15,6 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.8\n"
 
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -73,18 +74,18 @@ msgstr ""
 #. type: Plain text
 #: sections/credits.tex:4
 msgid "\\addsection{Credits}{\\images/experience.png}"
-msgstr ""
+msgstr "\\addsection{Crédits}{\\images/experience.png}"
 
 #. type: Plain text
 #: sections/credits.tex:6
 msgid "\\iftoggle{printable}{\\vspace{-\\baselineskip}}{}"
-msgstr ""
+msgstr "\\iftoggle{printable}{\\vspace{-\\baselineskip}}{}"
 
 #. type: center
 #: sections/credits.tex:8 sections/intro_and_toc.tex:16
 #: sections/intro_and_toc.tex:21
 msgid "\\bigbreak"
-msgstr ""
+msgstr "\\bigbreak"
 
 #. type: multicols*
 #: sections/credits.tex:13
@@ -94,6 +95,9 @@ msgid ""
 "You should check it out if you haven't seen it yet.\n"
 "\n"
 msgstr ""
+"Ce projet s'inspire sans complexe des meilleures pratiques du projet de réécriture des règles (https://github.com/Heegu-sama/Homm3BG), notamment le code LaTeX, l'ingénierie GitHub et le cadre de traduction.\n"
+"Si vous ne connaissez pas encore, jetez y un œil.\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:15
@@ -102,6 +106,8 @@ msgid ""
 "\\textbf{Scenario templating, tooling and automation}: Andrzej Wiącek, Tomáš Zeman\n"
 "\n"
 msgstr ""
+"\\textbf{Modèle de Scénario, outils et automatisation}: Andrzej Wiącek, Tomáš Zeman\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:17
@@ -110,6 +116,8 @@ msgid ""
 "\\textbf{Contributing scenarios in \\LaTeX{}:} Andrzej Wiącek, Tomáš Zeman, Xavier Borelly, Saveliy Ivanov, Tyson Heckert, Justus Törmälehto, Adam Obuchowicz, Vojtěch Růžička.  % no-check-caps\n"
 "\n"
 msgstr ""
+"\\textbf{Contribution au scénarios en \\LaTeX{}:} Andrzej Wiącek, Tomáš Zeman, Xavier Borelly, Saveliy Ivanov, Tyson Heckert, Justus Törmälehto, Adam Obuchowicz, Vojtěch Růžička.  % no-check-caps\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:19
@@ -118,6 +126,8 @@ msgid ""
 "\\phantom{Translators placeholder}\n"
 "\n"
 msgstr ""
+"\\textbf{Traduction Française}:} Nicolas Matoub\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:24
@@ -129,6 +139,11 @@ msgid ""
 "Everyone who has supported the project with suggestions, corrections, image resources, and words of encouragement either on Discord or BoardGameGeek.\n"
 "\n"
 msgstr ""
+"\\textbf{Remerciement}: Patrick Kersten pour \\href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{Editeur de Carte de Scénario}.\n"
+"Archon Studio, pour la production du jeu et les réponses à nos requêtes incessantes sur les règles et d'autres sujets.\n"
+"Jon Van Caneghem and tous ceux impliqués dans le développement du jeu vidéo original.\n"
+"Tous ceux qui ont soutenu le projet par leurs suggestions, correction, ressources graphiques et mot d'encouragement sur Discord ou BoardGameGeek.\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:26
@@ -137,12 +152,15 @@ msgid ""
 "\\textbf{Artwork borrowed from the official release was made by}: Tomasz Badalski, Yoann Boissonnet, Shen Fei, Viviane Tybusch Souza, Iana Vengerova, Bartosz Winkler\n"
 "\n"
 msgstr ""
+"\\textbf{Illustrations emprunté à la version officielle réalisées par}: Tomasz Badalski, Yoann Boissonnet, Shen Fei, Viviane Tybusch Souza, Iana Vengerova, Bartosz Winkler\n"
+"\n"
 
 #. type: multicols*
 #: sections/credits.tex:32
-#, fuzzy, no-wrap
-#| msgid "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]{\\art/land_mine.png}}"
+#, no-wrap
 msgid ""
 "{\\tikz[transparency group]\\node[opacity=0.2]{\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}};}\n"
 "\n"
-msgstr "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]{\\art/land_mine.png}}"
+msgstr ""
+"{\\tikz[transparency group]\\node[opacity=0.2]{\\includegraphics[width=1.3\\linewidth]{\\art/genie.png}};}\n"
+"\n"
