--- a/translations/title_page.tex/fr.po
+++ b/translations/title_page.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-10-23 21:18+0000\n"
-"PO-Revision-Date: 2025-05-15 08:02+0000\n"
+"PO-Revision-Date: 2025-11-14 19:10+0100\n"
 "Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/scenarios/fr/>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"X-Generator: Poedit 3.8\n"
 
 #.  !TeX spellcheck = en_US
 #. type: tikzpicture
@@ -52,7 +52,6 @@ msgstr ""
 #.  Render phantom SVGs before their use in tabular env
 #. type: Plain text
 #: sections/title_page.tex:30
-#, fuzzy
 msgid ""
 "\\phantom{ \\includesvg[height=0.1px]{\\svgs/bronze.svg} "
 "\\includesvg[height=0.1px]{\\svgs/bronze.svg} \\includesvg[height=0.1px]"
