--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -40,7 +40,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Every player must defeat the Level VII Army.
+Every player must defeat the Level VII Netural Army.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
