--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -84,7 +84,7 @@ End of \textbf{\nth{13} Round:}
   \item Collaboratively pay $P$~×~5~\svg{gold}, $P$~×~3~\svg{building_materials} and $P$~×~\svg{valuables} to reveal the Center Map Tile ($P$ stands for the number of players), e.g., 4 players must pay 20~\svg{gold}, 12~\svg{building_materials}, and 4~\svg{valuables}.
   \item At the end of every Astrologers Round, players must decide which player gets a free \svg{morale_positive} Token.
   \item Players may exchange Artifacts and Spells from their hands, as well as Units and Resources, if their Main Heroes are standing on adjacent Fields or if both Heroes are in their own Towns.
-  \item Once a player defeats the Level VII Army, their Heroes are removed from the Map.
+  \item Once a player defeats the Level VII Neutral Army, their Heroes are removed from the Map.
     They are no longer eligible to fight Timed Event Fights.
 \end{itemize}
 \hommtablemulticol[]{22}{
