Concise use of Morale symbol.

--- a/draft-scenarios/coops/the_ambushed_accord.tex
+++ b/draft-scenarios/coops/the_ambushed_accord.tex
@@ -45,7 +45,7 @@ Every player must defeat the Level VII Netural Army.
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Build either Camp \svg{building_special_tent} or Workshop \svg[12]{building_special_gears} for free. %(\svg{bulding_special_gears})
+  \item Build either \svg{building_special_tent} or \svg[12]{building_special_gears} for free.
 \end{itemize}
 \textbf{End of \nth{4} Round:}
 \begin{itemize}
