Fix artifact deck searching

--- a/translations/castle_sicilian_dragon.tex/cs.po
+++ b/translations/castle_sicilian_dragon.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-11-06 23:19+0100\n"
+"POT-Creation-Date: 2025-11-15 10:46+0000\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -579,7 +579,7 @@ msgid ""
 "  \\item Each time you visit a Trading Post, draw the top Cards from the \\svg{bronze} bronze, \\svg{silver} silver, and \\svg{golden} golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
-"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
+"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the Artifact Deck, twice.\n"
 "  \\item When fighting the enemy at their Town, they have a Citadel.\n"
 "    Don't forget to add the walls and arrow tower to make the battle a siege.\n"
 "\\end{itemize}\n"
@@ -593,7 +593,7 @@ msgstr ""
 "  \\item Pokaždé, když navštívíte Obchodní Stanici, táhněte horní karty z Balíčků \\svg{bronze} Bronzových, \\svg{silver} Stříbrných a \\svg{golden} Zlatých Neutrálních Nepřátel.\n"
 "    Můžete si najmout kteroukoli z nich nebo všechny, když zaplatíte jejich cenu.\n"
 "    Zamíchejte všechny nenajaté zpět do jejich Balíčků.\n"
-"  \\item Grál může být prodán na obchodním místě za 30 \\svg{gold} \\textit{nebo} \\textbf{Prohledat (3)} balíček relikvií, dvakrát.\n"
+"  \\item Grál může být prodán na obchodním místě za 30 \\svg{gold} \\textit{nebo} \\textbf{Prohledat (3)} Balíček Artefaktů, dvakrát.\n"
 "  \\item Při boji s nepřítelem v jeho městě mají citadelu.\n"
 "    Nezapomeňte přidat hradby a šípovou věž, aby se bitva stala obléháním.\n"
 "\\end{itemize}\n"
