--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -125,7 +125,7 @@ During this Castle campaign Scenario, the following rules apply:
   \item Each time you visit a Trading Post, draw the top Cards from the \svg{bronze} bronze, \svg{silver} silver, and \svg{golden} golden neutral enemy Decks.
     You may recruit any, or all of them by paying their cost.
     Shuffle any un-hired ones back into their Decks.
-  \item The Grail may be sold at a trading post for 30 \svg{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
+  \item The Grail may be sold at a trading post for 30 \svg{gold} \textit{or} \textbf{Search (3)} the Artifact Deck, twice.
   \item When fighting the enemy at their Town, they have a Citadel.
     Don't forget to add the walls and arrow tower to make the battle a siege.
 \end{itemize}
