--- a/translations/castle_sicilian_dragon.tex/castle_sicilian_dragon.tex.pot
+++ b/translations/castle_sicilian_dragon.tex/castle_sicilian_dragon.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-06 23:19+0100\n"
+"POT-Creation-Date: 2025-11-15 10:46+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -458,7 +458,7 @@ msgid ""
 "  \\item Each time you visit a Trading Post, draw the top Cards from the \\svg{bronze} bronze, \\svg{silver} silver, and \\svg{golden} golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
-"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
+"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the Artifact Deck, twice.\n"
 "  \\item When fighting the enemy at their Town, they have a Citadel.\n"
 "    Don't forget to add the walls and arrow tower to make the battle a siege.\n"
 "\\end{itemize}\n"
