--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-11-06 23:19+0100\n"
+"POT-Creation-Date: 2025-11-15 10:46+0000\n"
 "PO-Revision-Date: 2025-11-14 16:37+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -579,7 +579,7 @@ msgid ""
 "  \\item Each time you visit a Trading Post, draw the top Cards from the \\svg{bronze} bronze, \\svg{silver} silver, and \\svg{golden} golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
-"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
+"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the Artifact Deck, twice.\n"
 "  \\item When fighting the enemy at their Town, they have a Citadel.\n"
 "    Don't forget to add the walls and arrow tower to make the battle a siege.\n"
 "\\end{itemize}\n"
@@ -593,7 +593,7 @@ msgstr ""
 "  \\item À chaque visite du Comptoir, piochez une Carte de chaque Deck Ennemis Neutres \\svg{bronze} bronze, \\svg{silver} argent, et \\svg{golden} or.\n"
 "    Vous pouvez les recruter chacune en payant le coût.\n"
 "    Mélangez les non recrutés dans leurs Decks.\n"
-"  \\item Le Graal peut être vendu au Comptoir pour 30 \\svg{gold} \\textit{ou} \\textbf{Fouiller (3)} le Deck Relique, deux fois.\n"
+"  \\item Le Graal peut être vendu au Comptoir pour 30 \\svg{gold} \\textit{ou} \\textbf{Fouiller (3)} le Deck Artefact, deux fois.\n"
 "  \\item L'ennemie dans sa Ville possède une Citadelle .\n"
 "    N'oubliez pas d'ajouter les Murs et la Tourelle pour le siège.\n"
 "\\end{itemize}\n"
