--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-11-06 23:19+0100\n"
+"POT-Creation-Date: 2025-11-15 10:46+0000\n"
 "PO-Revision-Date: 2025-01-22 14:01+0000\n"
 "Last-Translator: Damian Sobkowiak <sopek1996@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -579,7 +579,7 @@ msgid ""
 "  \\item Each time you visit a Trading Post, draw the top Cards from the \\svg{bronze} bronze, \\svg{silver} silver, and \\svg{golden} golden neutral enemy Decks.\n"
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
-"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
+"  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the Artifact Deck, twice.\n"
 "  \\item When fighting the enemy at their Town, they have a Citadel.\n"
 "    Don't forget to add the walls and arrow tower to make the battle a siege.\n"
 "\\end{itemize}\n"
@@ -593,7 +593,7 @@ msgstr ""
 "  \\item Za każdym razem gdy odwiedzasz Punkt Handlowy, dobierz wierzchnie Karty z talii Neutralnych Jednostek \\svg{bronze} brązowych, \\svg{silver} srebrnych i \\svg{golden} złotych.\n"
 "    Możesz zrekrutować dowolną liczbę z nich, płacąc ich koszt.\n"
 "    Wtasuj wszystkie niezrekrutowane Jednostki z powrotem do ich Talii.\n"
-"  \\item Możesz sprzedać Graala w Punkcie Handlowym za 30 \\svg{gold} \\textit{albo} \\textbf{dwa razy Przeszukać (3)} talię Reliktów.\n"
+"  \\item Możesz sprzedać Graala w Punkcie Handlowym za 30 \\svg{gold} \\textit{albo} \\textbf{dwa razy Przeszukać (3)} Talię Artefaktów.\n"
 "  \\item Wróg podczas oblężenia dysponuje Cytadelą.\n"
 "    Nie zapomnij dodać murów i Wieży Łuczniczej.\n"
 "\\end{itemize}\n"
