--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -51,7 +51,7 @@ If no Victory Condition has been met by the end of Round 12, all players lose.
 \subsection*{\MakeUppercase{Victory Points}}
 The player with the most Victory Points (VP) wins.
 \begin{itemize}
-  \item 4 VP for defeating a Dragon Utopia
+  \item 4 VP for winning Combat in a Dragon Utopia
   \item 3 VP for each enemy Main Town captured \textit{once per enemy}
   \item 2 VP for each enemy Main Hero defeated
 \end{itemize}
